<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>TODO</groupId>
    <artifactId>TODO</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modelVersion>4.0.0</modelVersion>

    <name>CLEAR Maven Project</name>
    <description>DESCRIPTION</description>
    <url>PROG_URL</url>

    <licenses>
        <license>
            <name>Apache 2</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <properties>
        <imageDir>
            ${project.basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}
        </imageDir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <config.dir>${project.basedir}${file.separator}config</config.dir>

        <selenium.version>2.53.1</selenium.version>
        <aspectj.version>1.8.7</aspectj.version>
        <allure.version>1.5.0</allure.version>
        <overwrite.binaries>false</overwrite.binaries>

        <browser>firefox</browser>
        <threads>1</threads>
        <remote>false</remote>
        <seleniumGridURL/>
        <platform/>
        <browserVersion/>
        <useServices>false</useServices>
        <proxyEnabled>false</proxyEnabled>
        <proxyHost/>
        <proxyPort/>
        <base.url>http://staging.lwreid.com.au.tmp.anchor.net.au/</base.url>
        <login>LOGIN</login>
        <password>PASSWORD</password>
        <mailpassword/>
        <services.user>xx</services.user>
        <services.key>48a18679-e91d-410b-bb2e-7cd0cd9d958a</services.key>
        <download.dir>${project.basedir}${file.separator}download_data</download.dir>
        <report.dir>${project.basedir}${file.separator}report</report.dir>
        <suite.dir>${config.dir}${file.separator}testNG${file.separator}</suite.dir>

        <!--Debug suite-->
        <debugSuite>${suite.dir}dev.xml</debugSuite>

        <!--Default suites-->
        <suite1>${suite.dir}suite.xml</suite1>

        <defaultSuiteFiles>
            ${suite1}
        </defaultSuiteFiles>

        <suiteFile>${suite1}</suiteFile>

    </properties>
    <dependencies>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.11</artifactId>
            <version>2.3.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.main.extras</groupId>
            <artifactId>glassfish-embedded-all</artifactId>
            <version>4.1.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
        <groupId>org.testng</groupId>
        <artifactId>testng</artifactId>
        <version>6.9.9</version>
        <scope>test</scope>
    </dependency>
        <dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-testng-adaptor</artifactId>
            <version>${allure.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-bundle</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-commandline</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <groupId>ru.yandex.qatools.ashot</groupId>
            <artifactId>ashot</artifactId>
            <version>1.5.2</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>selenium-tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-clean-plugin</artifactId>
                        <version>2.6</version>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>${report.dir}</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <source>1.8</source>
                            <target>1.8</target>
                        </configuration>
                        <version>2.5.1</version>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>properties-maven-plugin</artifactId>
                        <version>1.0.0</version>
                        <executions>
                            <execution>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>write-project-properties</goal>
                                </goals>
                                <configuration>
                                    <outputFile>${project.build.outputDirectory}/my.properties</outputFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <!--<plugin>
                        <groupId>com.lazerycode.selenium</groupId>
                        <artifactId>driver-binary-downloader-maven-plugin</artifactId>
                        <version>1.0.11</version>
                        <configuration>
                            &lt;!&ndash;<rootStandaloneServerDirectory>${standalone.binary.root.folder}
                            </rootStandaloneServerDirectory>&ndash;&gt;
                            <downloadedZipFileDirectory>${project.basedir}/src/test/resources/selenium_standalone_zips
                            </downloadedZipFileDirectory>
                            <customRepositoryMap>${project.basedir}/src/test/resources/RepositoryMap.xml
                            </customRepositoryMap>
                            <overwriteFilesThatExist>${overwrite.binaries}</overwriteFilesThatExist>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>selenium</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.19</version>
                        <configuration>
                            <forkCount>3</forkCount>
                            <reuseForks>true</reuseForks>
                            <testFailureIgnore>true</testFailureIgnore>
                            <argLine>
                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" -Xmx1024m -XX:MaxPermSize=256m
                            </argLine>
                            <properties>
                                <property>
                                    <name>surefire.testng.verbose</name>
                                    <value>4</value>
                                </property>
                                <property>
                                    <name>failureproperty</name>
                                    <value>testngfail</value>
                                </property>
                                <property>
                                    <name>haltOnfailure</name>
                                    <value>false</value>
                                </property>
                                <property>
                                    <name>delegateCommandSystemProperties</name>
                                    <value>true</value>
                                </property>
                                <property>
                                    <name>usedefaultlisteners</name>
                                    <value>false</value>
                                </property>
                                <property>
                                    <name>listener</name>
                                    <value>
                                        <!--TestListener-->
                                    </value>
                                </property>
                            </properties>
                            <suiteXmlFiles>
                                <!-- Suite file injection parameter from command line -->
                                <suiteXmlFile>${suiteFile}<!--${debugSuite}--></suiteXmlFile>
                            </suiteXmlFiles>
                            <systemPropertyVariables>
                                <browser>${browser}</browser>
                                <gridURL>${seleniumGridURL}</gridURL>
                                <screenshotDirectory>${project.build.directory}/screenshots</screenshotDirectory>
                                <remoteDriver>${remote}</remoteDriver>
                                <use.services>${useServices}</use.services>
                                <desiredPlatform>${platform}</desiredPlatform>
                                <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
                                <proxyEnabled>${proxyEnabled}</proxyEnabled>
                                <proxyHost>${proxyHost}</proxyHost>
                                <proxyPort>${proxyPort}</proxyPort>
                                <base.url>${base.url}</base.url>
                                <imageDir>${imageDir}</imageDir>
                                <login>${login}</login>
                                <password>${password}</password>
                                <s.user>${services.user}</s.user>
                                <s.key>${services.key}</s.key>
                                <!--<remote.user>${default.user}</remote.user>-->
                                Set properties passed in by the driver binary downloader
                                /////
                            </systemPropertyVariables>

                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.aspectj</groupId>
                                <artifactId>aspectjweaver</artifactId>
                                <version>${aspectj.version}</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skip>false</skip>
                                </configuration>
                            </execution>
                        </executions>

                    </plugin>
                    <!--<plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>2.2-beta-5</version>
                        <configuration>
                            <descriptors>
                                <descriptor>config/assembly/zip.xml</descriptor>
                            </descriptors>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-assembly</id>
                                &lt;!&ndash; this is used for inheritance merges &ndash;&gt;
                                <goals>
                                    <goal>single</goal>
                                    &lt;!&ndash; goals == mojos &ndash;&gt;
                                </goals>
                            </execution>
                        </executions>
                    </plugin>-->
                    <!--<plugin>
                        <groupId>ch.fortysix</groupId>
                        <artifactId>maven-postman-plugin</artifactId>
                        <version>0.1.6</version>
                        <configuration>
                            <mailhost>smtp.gmail.com</mailhost>
                            <mailport>587</mailport>
                            <mailssl>true</mailssl>
                            <mailAltConfig>true</mailAltConfig>
                            <mailuser>tess.testss@gmail.com</mailuser>
                            <mailpassword>321654789</mailpassword>
                            <from>tess.testss@gmail.com</from>
                            <receivers>
                                <receiver>nikita.ovsyannikov@qa-testlab.com</receiver>
                                &lt;!&ndash;<receiver>${email}</receiver>&ndash;&gt;
                            </receivers>

                            <subject>Testing result of fotobook-platform.com</subject>
                            <failonerror>true</failonerror>
                            <htmlMessage>
                                <![CDATA[
                    <p>Hi,</p>
                    <p>Please check out the attached report. Thx.</p>
                    ]]>
                            </htmlMessage>
                            <fileSets>
                                <fileSet>
                                    <directory>${basedir}/target</directory>
                                    <includes>
                                        <include>**/maven-fotobook-platform-selenium-1.0-SNAPSHOT-bin.zip</include>
                                    </includes>
                                </fileSet>
                            </fileSets>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>send-mail</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>-->
                    <!--Needed only to show reports locally. Run jetty:run and open localhost:1234 to show the report-->
                    <plugin>
                        <groupId>org.eclipse.jetty</groupId>
                        <artifactId>jetty-maven-plugin</artifactId>
                        <version>9.2.10.v20150310</version>
                        <configuration>
                            <webAppSourceDirectory>${report.dir}</webAppSourceDirectory>
                            <stopKey>stop</stopKey>
                            <stopPort>1234</stopPort>
                            <httpConnector>
                                <port>9999</port>
                            </httpConnector>
                        </configuration>
                    </plugin>

                </plugins>
            </build>

            <reporting>
                <excludeDefaults>true</excludeDefaults>
                <plugins>
                    <plugin>
                        <groupId>ru.yandex.qatools.allure</groupId>
                        <artifactId>allure-maven-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <reportDirectory>${report.dir}</reportDirectory>
                        </configuration>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
    </profiles>
</project>